--- a/src/app/offer/offer.component.scss
+++ b/src/app/offer/offer.component.scss
@@ -3,10 +3,12 @@
     margin-top: 80px;
     width: 100%;
 }
+.offer-container-background {
 
+    background: #005062;
+}
 .offer-container-title{
     padding: 0 30px;
-    background: #005062;
     height: 300px;
     display: flex;
     align-items: center;
