--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,6 +1,5 @@
-<div class="search-container">
+<div class="search-container container">
     <div class="container-box">
-        <div class="left"></div>
         <div class="middle">
             <mat-form-field appearance="outline" class="search-box">
                 <input matInput placeholder="Seach For Restaurant Or Dishes" class="seach-input-text">
@@ -118,7 +117,6 @@
                 </mat-tab-group>
             </div>
         </div>
-        <div class="right"></div>
     </div>
 
 </div>
