--- a/src/app/shared/help/help.component.html
+++ b/src/app/shared/help/help.component.html
@@ -1,12 +1,12 @@
 <div class="help-container">
     <div class="help-container-body second-view">
-        <div class="secondary-container-header">
+        <div class="secondary-container-header container">
             <div class="header-text">
                 <h1 class="primary-text">Help & Support</h1>
                 <span class="secondary-text">Let's take a step ahead and help you better.</span>
             </div>
         </div>
-        <div class="body">
+        <div class="body container">
             <div class="list-view">
                 <div class="list-box">
                     <ul>
