--- a/src/app/single-restaurant/single-restaurant.component.html
+++ b/src/app/single-restaurant/single-restaurant.component.html
@@ -1,54 +1,56 @@
-<div class="single-restaurant-container">
-
-    <div class="header-container">
-        <div class="img-box">
-            <img mat-card-image style="width: 100%;" alt=""
-                src="https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_508,h_320,c_fill/x5zos2bebvlhbhkmi2ok">
-        </div>
-        <div class="description-box">
-            <div>
-                <h1 class="name">Name of Restaurant</h1>
-                <p style="margin-bottom: 0;">Megapolis Circle, Hinjewadi Phase-3</p>
-
+<div class="single-restaurant-container ">
+    <div class="header-background">
+        <div class="header-container container">
+            <div class="img-box">
+                <img mat-card-image style="width: 100%;" alt=""
+                    src="https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_508,h_320,c_fill/x5zos2bebvlhbhkmi2ok">
             </div>
-            <div class="rating-box">
-                <div class="box">
-                    <div class="upper-box">
-                        <mat-icon class="star-icon" fontSet="material-icons-outlined">star</mat-icon>
-                        <span>4.1</span>
-                    </div>
-                    <div class="lower-box">
-                        <span>
-                            500+ Rating
-                        </span>
-                    </div>
+            <div class="description-box">
+                <div>
+                    <h1 class="name">Name of Restaurant</h1>
+                    <p style="margin-bottom: 0;">Megapolis Circle, Hinjewadi Phase-3</p>
 
                 </div>
-                <div class="box">
-                    <div class="upper-box"> 48 mins</div>
-                    <div class="lower-box">Delivery Time</div>
-                </div>
-                <div class="box">
-                    <div class="upper-box">₹ 200</div>
-                    <div class="lower-box">Cost for two</div>
+                <div class="rating-box">
+                    <div class="box">
+                        <div class="upper-box">
+                            <mat-icon class="star-icon" fontSet="material-icons-outlined">star</mat-icon>
+                            <span>4.1</span>
+                        </div>
+                        <div class="lower-box">
+                            <span>
+                                500+ Rating
+                            </span>
+                        </div>
+
+                    </div>
+                    <div class="box">
+                        <div class="upper-box"> 48 mins</div>
+                        <div class="lower-box">Delivery Time</div>
+                    </div>
+                    <div class="box">
+                        <div class="upper-box">₹ 200</div>
+                        <div class="lower-box">Cost for two</div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="offer-box">
-            <div class="container">
-                <div class="offer">
-                    Offer
-                </div>
-                <div class="offer-text">
-                    <mat-icon class="offer-icon" fontSet="material-icons-outlined">local_offer</mat-icon>
-                    <div>
-                        30% off up to ₹75 on orders above ₹99 | Use coupon SWIGGY30
+            <div class="offer-box">
+                <div class="offer-container">
+                    <div class="offer">
+                        Offer
+                    </div>
+                    <div class="offer-text">
+                        <mat-icon class="offer-icon" fontSet="material-icons-outlined">local_offer</mat-icon>
+                        <div>
+                            30% off up to ₹75 on orders above ₹99 | Use coupon SWIGGY30
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="restaurant-body">
+
+    <div class="restaurant-body container">
         <div class="left">
             <mat-accordion displayMode="flat">
                 <mat-expansion-panel [disabled]="true">
