--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,6 +1,6 @@
 <div class="cart-container">
 
-    <div class="cart-container-box">
+    <div class="cart-container-box container">
         <div class="left-container-box">
             <div class="child-box" *ngIf="!user">
                 <div>
