--- a/src/app/offer/offer.component.html
+++ b/src/app/offer/offer.component.html
@@ -1,12 +1,16 @@
-<div class="offer-container">
-    <div class="offer-container-title">
-        <div class="title-text">
-            <h1>Offers for you </h1>
-            <span> Explore top deals and offers exclusively for you!</span>
+<div class="offer-container ">
+    <div class="offer-container-background">
+        <div class="offer-container-title container">
+            <div class="title-text">
+                <h1>Offers for you </h1>
+                <span> Explore top deals and offers exclusively for you!</span>
+            </div>
+            <img height="200"
+                src="https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto/KHu24Gqw_md3ham">
         </div>
-        <img height="200" src="https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto/KHu24Gqw_md3ham">
     </div>
-    <div class="offer-tabs">
+
+    <div class="offer-tabs container">
         <mat-tab-group>
             <mat-tab label="Restaurant offers">
                 <div style="margin-top: 40px">
