--- a/src/app/single-restaurant/single-restaurant.component.scss
+++ b/src/app/single-restaurant/single-restaurant.component.scss
@@ -3,11 +3,14 @@
     width: 100%;
 }
 
+.header-background {
+    background-color: #171a29;
+}
 .header-container {
     //padding: 0 20px;
     z-index: 0;
     background-color: #171a29;
-    padding: 10px 20px;
+    padding: 40px 20px;
     color: #fff;
     height: 150px;
     display: flex;
@@ -69,7 +72,7 @@
         width: 298px;
         padding: 74px 0 48px;
         height: 100%;
-        .container{
+        .offer-container{
             transform: translateZ(0);
             transition: transform .2s ease-in-out;
             border: 1px solid #bec0c8;
